cocoa: announce omnibox autocompletes

This change:
1) Adds AutocompleteMatchType::ToAccessibilityLabel, which turns a match type
   and match text into a descriptive string for an accessibility label;
2) Adds descriptive string templates for most types of autocomplete match;
3) Has OmniboxViewMac announce when the temporary text changes, instead of just
   when the autocomplete text changes.

Bug: 696233
Change-Id: If1df0e49e212810ad7d3bc49c0b5d262e107f7c7