chrome/browser/ui/cocoa/omnibox/omnibox_view_mac.h
@@ -80,7 +80,8 @@ class OmniboxViewMac : public OmniboxView,
   void ApplyCaretVisibility() override;
   void OnTemporaryTextMaybeChanged(const base::string16& display_text,
                                    bool save_original_selection,
-                                   bool notify_text_changed) override;
+                                   bool notify_text_changed,
+                                   AutocompleteMatch::Type type) override;
   bool OnInlineAutocompleteTextMaybeChanged(const base::string16& display_text,
                                             size_t user_text_length) override;
   void OnInlineAutocompleteTextCleared() override;
