chrome/browser/ui/views/omnibox/omnibox_view_views.cc
@@ -472,7 +472,8 @@ void OmniboxViewViews::ApplyCaretVisibility() {
 void OmniboxViewViews::OnTemporaryTextMaybeChanged(
     const base::string16& display_text,
     bool save_original_selection,
-    bool notify_text_changed) {
+    bool notify_text_changed,
+    AutocompleteMatch::Type match_type) {
   if (save_original_selection)
     saved_temporary_selection_ = GetSelectedRange();
 
