ios/chrome/browser/ui/omnibox/omnibox_view_ios.mm
@@ -262,6 +262,7 @@ void OmniboxViewIOS::UpdatePopup() {
 
 void OmniboxViewIOS::OnTemporaryTextMaybeChanged(
     const base::string16& display_text,
+    AutocompleteMatch::Type match_type,
     bool save_original_selection,
     bool notify_text_changed) {
   SetWindowTextAndCaretPos(display_text, display_text.size(), false, false);
